<?xml version="1.0"?>
<package format="2">
  <name>target_tracking</name>
  <version>0.0.0</version>
  <description>The target_tracking package</description>
  <maintainer email="twakonig@student.ethz.ch">Theresa Wakonig</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<depend>eigen</depend>-->
  <!--<depend>boost</depend>-->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roslib</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
